cmake_minimum_required(VERSION 3.8)
project(Systems)

set(CMAKE_CXX_STANDARD 17)

set(SOURCE_FILES
        Euler/euler.c
        ArrayPointers/arrays_pointers.c
        StringFunctionDemonstrations/string_function_demos.c
        Strings/string_funcs.c
        Strings/string_tests.c
        BackupStrings/string_funcs.c
        BackupStrings/string_tests.c
        LinkedList/linked_list.c
        LinkedList/linked_list_test.c
        LinkedList/linked_list_test.h
        MusicLibraryOrganizer/song_node.c
        MusicLibraryOrganizer/song_node.h
        MusicLibraryOrganizer/song_library.c
        MusicLibraryOrganizer/song_library.h
        MusicLibraryOrganizer/song.c
        MusicLibraryOrganizer/song.h
        MusicLibraryOrganizer/main.c
        MusicLibraryOrganizer/main.h
        Stacktrace/stacktrace.c
        Stacktrace/stacktrace.h
        GccStrncpyBug/gcc_strncpy_bypass_bug.c
        GccStrncpyBug/gcc_strncpy_cause_bug.c
        DevRandom/read_random.c
        FileStats/file_stats.c
        ListDir/listdir.c
        ListDir/file_stats.c
        ListDir/file_stats.h
        ListDir/listdir.h
        SignalHandlerExample/sighandler.c
        SignalHandlerExample/stacktrace.c
        SignalHandlerExample/stacktrace.h
        SignalHandlerExample/sigaction.h
        Exec/exec.c
        ArgParse/arg_parse.c
        ArgParse/util.c
        ArgParse/util.h
        ArgParse/sigaction.h
        ArgParse/stacktrace.c
        ArgParse/stacktrace.h
        Forking/fork.c
        Forking/util.c
        Forking/util.h
        Forking/sigaction.h
        Forking/stacktrace.c
        Forking/stacktrace.h
        Piping/piping.c
        Piping/util.c
        Piping/util.h
        Piping/sigaction.h
        Piping/stacktrace.c
        Piping/stacktrace.h
        Shell/aliases.c
        Shell/aliases.h
        Shell/builtins/builtins.c
        Shell/builtins/builtins.h
        Shell/builtins/cd.c
        Shell/builtins/cd.h
        Shell/shell.c
        Shell/shell.h
        Shell/shell_utils.c
        Shell/shell_utils.h
        Shell/util/sigaction.h
        Shell/util/stacktrace.c
        Shell/util/stacktrace.h
        Shell/test/test_argv.c
        Shell/util/utils.c
        Shell/util/utils.h
        Shell/argvv.c
        Shell/argvv.h
        Shell/preprocessing.c
        Shell/preprocessing.h
        Shell/util/str_utils.c
        Shell/util/str_utils.h
        Shell/shell_io.c
        Shell/shell_io.h
        Shell/builtins/exit.c
        Shell/builtins/exit.h
        Shell/builtins/alias.c
        Shell/builtins/alias.h
        Shell/builtins/unalias.c
        Shell/builtins/unalias.h
        Shell/builtins/source.c
        Shell/builtins/source.h
        Shell/util/io_utils.c
        Shell/util/io_utils.h
        Shell/test/test_str_utils.c
        Shell/run_commands.c
        Shell/run_commands.h
        Shell/util/pipes.c
        Shell/util/pipes.h
        Shell/util/semaphores.c
        Shell/util/semaphores.h
        Shell/util/shared_memory.c
        Shell/util/shared_memory.h
        Shell/util/shared_locks.c
        Shell/util/shared_locks.h
        Shell/util/string_builder.c
        Shell/util/string_builder.h
        Shell/test/test_string_builder.c
        Shell/builtins/pid.c
        Shell/builtins/pid.h
        Shell/chars.c
        SemaphoreController/semaphore_controller.c
        SemaphoreController/util/sigaction.h
        SemaphoreController/util/stacktrace.c
        SemaphoreController/util/stacktrace.h
        SemaphoreController/util/string_builder.h
        SemaphoreController/util/string_builder.h
        SemaphoreController/util/utils.c
        SemaphoreController/util/utils.h
        )
add_executable(Systems ${SOURCE_FILES})