cmake_minimum_required(VERSION 3.8)
project(Systems)

set(CMAKE_CXX_STANDARD 17)

set(SOURCE_FILES
        Euler/euler.c
        ArrayPointers/arrays_pointers.c
        StringFunctionDemonstrations/string_function_demos.c
        Strings/string_funcs.c
        Strings/string_tests.c
        BackupStrings/string_funcs.c
        BackupStrings/string_tests.c
        LinkedList/linked_list.c
        LinkedList/linked_list_test.c
        LinkedList/linked_list_test.h
        MusicLibraryOrganizer/song_node.c
        MusicLibraryOrganizer/song_node.h
        MusicLibraryOrganizer/song_library.c
        MusicLibraryOrganizer/song_library.h
        MusicLibraryOrganizer/song.c
        MusicLibraryOrganizer/song.h
        MusicLibraryOrganizer/main.c
        MusicLibraryOrganizer/main.h
        Stacktrace/stacktrace.c
        Stacktrace/stacktrace.h
        GccStrncpyBug/gcc_strncpy_bypass_bug.c
        GccStrncpyBug/gcc_strncpy_cause_bug.c
        DevRandom/read_random.c
        FileStats/file_stats.c
        ListDir/listdir.c
        ListDir/file_stats.c
        ListDir/file_stats.h
        ListDir/listdir.h
        SignalHandlerExample/sighandler.c
        SignalHandlerExample/stacktrace.c
        SignalHandlerExample/stacktrace.h
        SignalHandlerExample/sigaction.h
        ArgParse/arg_parse.c
        ArgParse/util.c
        ArgParse/util.h
        ArgParse/sigaction.h
        ArgParse/stacktrace.c
        ArgParse/stacktrace.h
        Forking/fork.c
        Forking/util.c
        Forking/util.h
        Forking/sigaction.h
        Forking/stacktrace.c
        Forking/stacktrace.h
        Piping/piping.c
        Piping/util.c
        Piping/util.h
        Piping/sigaction.h
        Piping/stacktrace.c
        Piping/stacktrace.h
        Shell/aliases.c
        Shell/aliases.h
        Shell/builtins/builtins.c
        Shell/builtins/builtins.h
        Shell/builtins/cd.c
        Shell/builtins/cd.h
        Shell/shell.c
        Shell/shell.h
        Shell/shell_utils.c
        Shell/shell_utils.h
        Shell/util/sigaction.h
        Shell/util/stacktrace.c
        Shell/util/stacktrace.h
        Shell/test/test_argv.c
        Shell/util/utils.c
        Shell/util/utils.h
        Shell/argvv.c
        Shell/argvv.h
        Shell/preprocessing.c
        Shell/preprocessing.h
        Shell/util/str_utils.c
        Shell/util/str_utils.h
        Shell/shell_io.c
        Shell/shell_io.h
        Shell/builtins/exit.c
        Shell/builtins/exit.h
        Shell/builtins/alias.c
        Shell/builtins/alias.h
        Shell/builtins/unalias.c
        Shell/builtins/unalias.h
        Shell/builtins/source.c
        Shell/builtins/source.h
        Shell/util/io_utils.c
        Shell/util/io_utils.h
        Shell/test/test_str_utils.c
        Shell/run_commands.c
        Shell/run_commands.h
        Shell/util/pipes.c
        Shell/util/pipes.h
        Shell/util/semaphores.c
        Shell/util/semaphores.h
        Shell/util/shared_memory.c
        Shell/util/shared_memory.h
        Shell/util/shared_locks.c
        Shell/util/shared_locks.h
        Shell/util/string_builder.c
        Shell/util/string_builder.h
        Shell/test/test_string_builder.c
        Shell/builtins/pid.c
        Shell/builtins/pid.h
        Shell/chars.c
        SemaphoreController/semaphore_controller.c
        SemaphoreController/util/sigaction.h
        SemaphoreController/util/stacktrace.c
        SemaphoreController/util/stacktrace.h
        SemaphoreController/util/string_builder.h
        SemaphoreController/util/string_builder.h
        SemaphoreController/util/utils.c
        SemaphoreController/util/utils.h
        StoryGameCopy/khyber/story.h
        StoryGameCopy/khyber/story_controller.c
        StoryGameCopy/khyber/util/sigaction.h
        StoryGameCopy/khyber/util/stacktrace.c
        StoryGameCopy/khyber/util/stacktrace.h
        StoryGameCopy/khyber/util/string_builder.c
        StoryGameCopy/khyber/util/string_builder.h
        StoryGameCopy/khyber/util/utils.c
        StoryGameCopy/khyber/util/utils.h
        StoryGameCopy/khyber/util/ipc_utils.c 
        StoryGameCopy/khyber/util/ipc_utils.h 
        StoryGameCopy/khyber/util/resource_utils.c 
        StoryGameCopy/khyber/util/resource_utils.h 
        StoryGameCopy/khyber/util/io_utils.c 
        StoryGameCopy/khyber/util/io_utils.h 
        StoryGameCopy/khyber/story_controller.h 
        StoryGameCopy/khyber/client.c 
        StoryGameCopy/khyber/client.h 
        StoryGameCopy/khyber/story.c 
        StoryGameCopy/khyber/control.c
        StoryGame/client.c
        StoryGame/control.c
        StoryGame/head.h
        LocalPipeNetworking/pipe_networking.c
        LocalPipeNetworking/pipe_networking.h
        LocalPipeNetworking/client.c
        LocalPipeNetworking/client.h
        LocalPipeNetworking/basic_server.c
        LocalPipeNetworking/basic_server.h
        LocalPipeNetworking/util/sigaction.h
        LocalPipeNetworking/util/stacktrace.c
        LocalPipeNetworking/util/stacktrace.h
        LocalPipeNetworking/util/string_builder.c
        LocalPipeNetworking/util/string_builder.h
        LocalPipeNetworking/util/string_utils.c
        LocalPipeNetworking/util/string_utils.h
        LocalPipeNetworking/util/utils.c
        LocalPipeNetworking/util/utils.h
        LocalPipeNetworking/util/random.c
        LocalPipeNetworking/util/random.h
        LocalPipeNetworking/util/io.h
        ForkingServer/pipe_networking.c
        ForkingServer/pipe_networking.h
        ForkingServer/client.c
        ForkingServer/client.h
        ForkingServer/basic_server.c
        ForkingServer/basic_server.h
        ForkingServer/util/sigaction.h
        ForkingServer/util/stacktrace.c
        ForkingServer/util/stacktrace.h
        ForkingServer/util/string_builder.c
        ForkingServer/util/string_builder.h
        ForkingServer/util/string_utils.c
        ForkingServer/util/string_utils.h
        ForkingServer/util/utils.c
        ForkingServer/util/utils.h
        ForkingServer/util/random.c
        ForkingServer/util/random.h
        ForkingServer/util/io.h
        ForkingServer/src/client.c
        ForkingServer/src/forking_server.c
        ForkingServer/src/pipe_networking.c
        ForkingServer/src/pipe_networking.h
        ForkingServer/forking_server.c ForkingServer/forking_server.h ForkingServer/util/sigaction.c ForkingServer/util/hash.c ForkingServer/util/hash.h ForkingServer/modify_text.c ForkingServer/modify_text.h ForkingServer/util/io.c ForkingServer/util/sized_string.c ForkingServer/util/sized_string.h)
add_executable(Systems ${SOURCE_FILES})